xxl-job--首次部署需要修改与注意的地方

--- a/xxl-job-executor-samples/xxl-job-executor-sample-springboot/src/main/resources/application.properties
+++ b/xxl-job-executor-samples/xxl-job-executor-sample-springboot/src/main/resources/application.properties
@@ -6,7 +6,9 @@ logging.config=classpath:logback.xml
 
 
 ### xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
-xxl.job.admin.addresses=http://127.0.0.1:8080/xxl-job-admin
+### 这里实际指的是：admin-web的URL地址
+### xxl.job.admin.addresses=http://127.0.0.1:8080/xxl-job-admin
+xxl.job.admin.addresses=http://127.0.0.1:7701
 
 ### xxl-job executor address
 xxl.job.executor.appname=xxl-job-executor-sample
