--- a/xxl-job-admin/src/main/resources/xxl-job-admin.properties
+++ b/xxl-job-admin/src/main/resources/xxl-job-admin.properties
@@ -1,14 +1,14 @@
 ### xxl-job db  (use &amp; replace & in xml)
 xxl.job.db.driverClass=com.mysql.jdbc.Driver
-xxl.job.db.url=jdbc:mysql://localhost:3306/xxl-job?useUnicode=true&characterEncoding=UTF-8
+xxl.job.db.url=jdbc:mysql://192.168.3.213:3310/xxl-job?useUnicode=true&characterEncoding=UTF-8
 xxl.job.db.user=root
-xxl.job.db.password=root_pwd
+xxl.job.db.password=123456
 
 ### xxl-job email
-xxl.job.mail.host=smtp.163.com
+xxl.job.mail.host=smtp.qq.com
 xxl.job.mail.port=25
-xxl.job.mail.username=ovono802302@163.com
-xxl.job.mail.password=asdfzxcv
+xxl.job.mail.username=591757XXX3@qq.com
+xxl.job.mail.password=password
 xxl.job.mail.sendNick=《任务调度平台XXL-JOB》
 
 ### xxl-job login
